--- a/src/pages/Cart/Cart.module.css
+++ b/src/pages/Cart/Cart.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100vh;
     height: 100dvh;
-    padding: 2rem;
+    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -41,9 +41,10 @@
 
 .cartContainer {
     width: 98%;
-    max-width: 1200px;
-    height: 100%;
-    padding: 20px;
+    max-width: 1400px;
+    height: calc(100% - 150px);
+    margin-top: 7rem;
+    padding: 30px;
     background-color: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
@@ -53,9 +54,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
+    gap: 30px;
     position: relative;
     z-index: 3;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
     animation: fadeInScale 0.8s cubic-bezier(0.22, 1, 0.36, 1) forwards;
 }
 
