--- a/src/pages/DatafastInstructions/DatafastInstructions.module.css
+++ b/src/pages/DatafastInstructions/DatafastInstructions.module.css
@@ -2,11 +2,11 @@
     width: 100%;
     height: 100vh;
     height: 100dvh;
-    padding: 2rem;
+    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     position: relative;
     overflow: hidden;
     background-color: #000;
@@ -45,8 +45,10 @@
 }
 
 .instructionCard {
-    width: 90%;
+    width: 98%;
     max-width: 800px;
+    height: calc(100% - 150px);
+    margin-top: 7rem;
     padding: 5rem 3rem;
     background: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(25px);
@@ -57,6 +59,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     position: relative;
     z-index: 3;
     animation: fadeInScale 0.8s cubic-bezier(0.22, 1, 0.36, 1) forwards;
