--- a/src/pages/Details/Details.module.css
+++ b/src/pages/Details/Details.module.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100vh;
     height: 100dvh;
-    padding: 2rem;
+    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -42,9 +42,10 @@
 /* Contenedor de detalles */
 .detailContainer {
     width: 98%;
-    max-width: 1200px;
-    height: 100%;
-    padding: 25px;
+    max-width: 1400px;
+    height: calc(100% - 150px);
+    margin-top: 7rem;
+    padding: 30px;
     background-color: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(30px);
     -webkit-backdrop-filter: blur(30px);
@@ -54,9 +55,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
+    gap: 30px;
     position: relative;
     z-index: 3;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
     animation: fadeInSlide 0.8s cubic-bezier(0.22, 1, 0.36, 1) forwards;
 }
 
