--- a/src/pages/Form/Form.module.css
+++ b/src/pages/Form/Form.module.css
@@ -2,11 +2,11 @@
     width: 100%;
     height: 100vh;
     height: 100dvh;
-    padding: 1.5rem;
+    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     position: relative;
     overflow: hidden;
     background-color: #000;
@@ -45,14 +45,15 @@
 }
 
 .formCard {
-    width: 100%;
-    max-width: 480px;
-    padding: 20px;
+    width: 98%;
+    max-width: 600px;
+    margin-top: 7rem;
+    padding: 40px;
     background: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
     border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 24px;
+    border-radius: 34px;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
     position: relative;
     z-index: 3;
