--- a/src/pages/Home/Home.module.css
+++ b/src/pages/Home/Home.module.css
@@ -5,7 +5,7 @@
     justify-content: center;
     height: 100vh;
     height: 100dvh;
-    padding: 2rem;
+    padding: 0;
     position: relative;
     overflow: hidden;
     background-color: #000;
