--- a/src/pages/PaymentOptions/PaymentOptions.module.css
+++ b/src/pages/PaymentOptions/PaymentOptions.module.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100vh;
     height: 100dvh;
-    padding: 2rem;
+    padding: 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -70,20 +70,26 @@
 }
 
 .userData {
-    width: 95%;
-    max-width: 500px;
-    padding: 2rem;
+    width: 98%;
+    max-width: 1400px;
+    height: calc(100% - 150px);
+    margin-top: 7rem;
+    padding: 3rem;
     background: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(25px);
     -webkit-backdrop-filter: blur(25px);
     border: 1px solid rgba(255, 255, 255, 0.1);
-    border-radius: 24px;
+    border-radius: 30px;
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.5);
     display: flex;
     flex-direction: column;
-    gap: 0.8rem;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 30px;
     position: relative;
     z-index: 3;
+    overflow-y: auto;
+    overflow-x: hidden;
     animation: fadeInScale 0.8s cubic-bezier(0.22, 1, 0.36, 1) forwards;
 }
 
