--- a/src/pages/Details/Details.module.css
+++ b/src/pages/Details/Details.module.css
@@ -43,9 +43,10 @@
 .detailContainer {
     width: 98%;
     max-width: 1400px;
-    height: calc(100% - 150px);
+    height: auto;
+    max-height: calc(100% - 150px);
     margin-top: 7rem;
-    padding: 30px;
+    padding: 40px;
     background-color: rgba(255, 255, 255, 0.05);
     backdrop-filter: blur(30px);
     -webkit-backdrop-filter: blur(30px);
@@ -56,7 +57,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    gap: 30px;
+    gap: 40px;
     position: relative;
     z-index: 3;
     overflow-y: auto;
