--- a/src/components/common/Card/Card.module.css
+++ b/src/components/common/Card/Card.module.css
@@ -23,10 +23,16 @@
 
 .image {
     width: 100%;
-    height: 400px;
+    height: 380px; /* Base height */
     object-fit: cover;
     display: block;
     transition: transform 1.2s cubic-bezier(0.22, 1, 0.36, 1);
+}
+
+@media (orientation: portrait) {
+    .image {
+        height: 460px; /* Kiosk Standard */
+    }
 }
 
 .container:hover .image {
