--- a/src/components/common/MosaicoCard/MosaicoCard.module.css
+++ b/src/components/common/MosaicoCard/MosaicoCard.module.css
@@ -24,8 +24,14 @@
 .imageGrid {
     display: flex;
     width: 100%;
-    height: 460px; 
+    height: 380px; /* Base height */
     transition: transform 1s ease-in-out;
+}
+
+@media (orientation: portrait) {
+    .imageGrid {
+        height: 460px; /* Kiosk Standard */
+    }
 }
 
 /* Diseño con imagen grande a la izquierda */
